--- a/python-docker-app/Dockerfile
+++ b/python-docker-app/Dockerfile
@@ -7,7 +7,10 @@ WORKDIR /usr/src/app
 # Copy the requirements.txt first to install dependencies
 COPY requirements.txt ./
 
-# Install the dependencies
+# Install specific compatible versions of Flask and Werkzeug
+RUN pip install --no-cache-dir Flask==2.0.3 Werkzeug==2.0.3
+
+# Install other dependencies from requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the rest of the application files
